# training-python

./: README.md  pyproject.toml
src/training-python/: main.py
