[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "training-python-alexrodfe"
version = "0.0.1"
authors = [
  { name="Alex Rodriguez", email="alexrodfe@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexrodfe/training-python"